clusters/cl01tl/manifests/garage/Deployment-garage-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/controller: webui
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: garage
    helm.sh/chart: garage-5.1.0
  namespace: garage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: webui
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  template:
    metadata:
      annotations:
        checksum/configMaps: a4f613efa4f7fb06d8534c15125737341ddd9bb29862c9d650df9887dfed102e
      labels:
        app.kubernetes.io/controller: webui
        app.kubernetes.io/instance: garage
        app.kubernetes.io/name: garage
    spec:
      enableServiceLinks: false
      serviceAccountName: garage
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: API_BASE_URL
              value: http://garage-main.garage:3903
            - name: S3_ENDPOINT_URL
              value: http://garage-main.garage:3900
            - name: API_ADMIN_KEY
              valueFrom:
                secretKeyRef:
                  key: GARAGE_ADMIN_TOKEN
                  name: garage-token
          image: khairul169/garage-webui:1.1.0@sha256:17c793551873155065bf9a022dabcde874de808a1f26e648d4b82e168806439c
          name: main
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
          volumeMounts:
            - mountPath: /etc/garage.toml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: garage-1.toml
      volumes:
        - configMap:
            name: garage
          name: config
