clusters/cl01tl/manifests/garage/Service-garage-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-2
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: garage
    app.kubernetes.io/service: garage-2
    helm.sh/chart: garage-5.1.0
  namespace: garage
spec:
  type: ClusterIP
  ports:
    - port: 3903
      targetPort: 3903
      protocol: TCP
      name: admin
    - port: 3901
      targetPort: 3901
      protocol: TCP
      name: rpc
    - port: 3900
      targetPort: 3900
      protocol: TCP
      name: s3
    - port: 3902
      targetPort: 3902
      protocol: TCP
      name: web
  selector:
    app.kubernetes.io/controller: server-2
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
