clusters/cl01tl/manifests/garage/Service-garage-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-main
  namespace: garage
  labels:
    app.kubernetes.io/name: garage-main
    app.kubernetes.io/service: garage-main
    app.kubernetes.io/instance: garage
    app.kubernetes.io/part-of: garage
spec:
  ports:
    - name: admin
      port: 3903
      protocol: TCP
      targetPort: 3903
    - name: rpc
      port: 3901
      protocol: TCP
      targetPort: 3901
    - name: s3
      port: 3900
      protocol: TCP
      targetPort: 3900
    - name: web
      port: 3902
      protocol: TCP
      targetPort: 3902
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    garage-type: server
