clusters/cl01tl/manifests/garage/Service-garage-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: garage
    app.kubernetes.io/service: garage-webui
    helm.sh/chart: garage-5.1.0
  namespace: garage
spec:
  type: ClusterIP
  ports:
    - port: 3909
      targetPort: 3909
      protocol: TCP
      name: webui
  selector:
    app.kubernetes.io/controller: webui
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
