clusters/cl01tl/manifests/garage/HTTPRoute-garage-webui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: garage
    helm.sh/chart: garage-5.1.0
  namespace: garage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "garage-webui.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage-webui
          namespace: garage
          port: 3909
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
