clusters/cl01tl/manifests/garage/HTTPRoute-http-route-garage-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-garage-s3
  namespace: garage
  labels:
    app.kubernetes.io/name: http-route-garage-s3
    app.kubernetes.io/instance: garage
    app.kubernetes.io/part-of: garage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - garage-s3.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: garage-main
          port: 3900
          weight: 100
